[package]
name = "target_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
bytes = "1.5"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"
url = "2.5"
rand = "0.8"
rustls = { version = "0.22", features = ["ring"] }
tokio-rustls = { version = "0.25", features = ["ring"] }
rustls-pki-types = "1.0"
rcgen = "0.12"
rustls-native-certs = "0.8"
rustls-pemfile = "2.1"
mimalloc = { version = "0.1", default-features = false }
socket2 = "0.5"

[dev-dependencies]
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3


